apps/jellyseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      containers:
        - name: jellyseerr
          image: fallenbagel/jellyseerr:latest
          ports:
            - containerPort: 5055
          volumeMounts:
            - name: config
              mountPath: /app/config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyseerr-config-pvc
  dnsPolicy: ClusterFirst
---
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: default
spec:
  selector:
    app: jellyseerr
  ports:
    - port: 5055
      targetPort: 5055
  type: ClusterIP
